This patch lays the groundwork for https://bugs.webkit.org/show_bug.cgi?id=47514 CSS transforms should affect scrolling by adding topmostPosition().

Reviewed by Dave Hyatt.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::topmostPosition):
* rendering/RenderBlock.h:
* rendering/RenderBox.cpp:
(WebCore::RenderBox::topmostPosition):
* rendering/RenderBox.h:
* rendering/RenderMedia.cpp:
(WebCore::RenderMedia::topmostPosition):
* rendering/RenderMedia.h:
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::topmostPosition):
* rendering/RenderTableSection.h:



Canonical link: https://commits.webkit.org/60404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69822 268f45cc-cd09-0410-ab3c-d52691b4dbfc