WebCore/rendering/RenderMedia.h
@@ -85,6 +85,7 @@ private:
     virtual bool isMedia() const { return true; }
     virtual bool isImage() const { return false; }
 
+    virtual int topmostPosition(bool includeOverflowInterior = true, bool includeSelf = true) const;
     virtual int lowestPosition(bool includeOverflowInterior = true, bool includeSelf = true) const;
     virtual int rightmostPosition(bool includeOverflowInterior = true, bool includeSelf = true) const;
     virtual int leftmostPosition(bool includeOverflowInterior = true, bool includeSelf = true) const;
